# ai-dlc

aidlc-table-order/backend/: .env.example  .gitignore  Dockerfile  alembic.ini  history.py  pyproject.toml
aidlc-table-order/backend/alembic/: env.py
aidlc-table-order/backend/alembic/versions/: d2b86ccb8e3b_initial_schema_13_tables.py
aidlc-table-order/backend/app/: main.py
aidlc-table-order/backend/app/dto/: __init__.py  auth.py  menu.py  option_group.py  order.py  recommendation.py  store.py  table.py
aidlc-table-order/backend/app/repositories/: admin.py  category.py  menu.py  option_group.py  order.py  order_history.py  store.py  table.py  table_session.py
aidlc-table-order/backend/app/routers/: auth.py  menus.py  option_groups.py  orders.py  recommendations.py  stores.py  tables.py
aidlc-table-order/backend/app/services/: auth.py  menu.py  order.py  recommendation.py  store.py  table.py
aidlc-table-order/backend/cores/: config.py  logging.py
aidlc-table-order/backend/cores/db/: session.py
aidlc-table-order/backend/cores/db/models/: __init__.py  admin.py  base.py  category.py  enums.py  menu.py  menu_option_group.py  option_group.py  option_item.py  (+7 more)
aidlc-table-order/backend/cores/security/: __init__.py  deps.py  jwt.py  password.py
aidlc-table-order/backend/infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
aidlc-table-order/backend/scripts/: seed.py
aidlc-table-order/backend/tests/: conftest.py  test_auth.py  test_menus.py  test_option_groups.py  test_orders.py  test_recommendations.py  test_stores.py  test_tables.py
(+171 files in other folders)
